--- a/src/root.scss
+++ b/src/root.scss
@@ -1,3 +1,5 @@
+@import "./_globals.scss";
+
 html,
 body,
 #app {
@@ -18,14 +20,6 @@ body,
         sans-serif;
 }
 
-@media (min-width: 768px) {
-    html,
-    body,
-    #app {
-        width: 264px;
-    }
-}
-
 .root {
     width: 100%;
     height: 100%;
@@ -34,11 +28,11 @@ body,
 .court-provider {
     width: 100%;
     height: 100%;
-    background: #c4e1ff;
+    background-color: $court-provider-background-color;
 }
 
 .sportsman {
     width: 100%;
     height: 100%;
-    background: #272727;
+    background-color: $sportsman-background-color;
 }
