--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    margin: 0;
+html,
+body,
+#app {
+    margin: auto;
+    width: 100%;
+    height: 100%;
     font-family:
         -apple-system,
         BlinkMacSystemFont,
@@ -20,14 +24,4 @@ body {
         sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-    font-family:
-        source-code-pro,
-        Menlo,
-        Monaco,
-        Consolas,
-        "Courier New",
-        monospace;
 }
