--- a/src/sportsman/login.scss
+++ b/src/sportsman/login.scss
@@ -1,4 +1,4 @@
-@import "./_sportsman.scss";
+@import "../_globals.scss";
 
 .login {
     width: 100%;
@@ -10,7 +10,7 @@
     font-weight: bold;
     font-style: italic;
     text-align: center;
-    color: $primary-color;
+    color: $sportsman-primary-color;
 }
 
 .login-image {
@@ -25,14 +25,14 @@
     width: 60%;
     height: 6%;
     font-size: 16px;
-    color: $normal-text-color;
+    color: $sportsman-normal-text-color;
     background-color: transparent;
-    border: 1px solid $input-border-color;
+    border: 1px solid $sportsman-input-border-color;
     border-radius: 16px;
 
     &::placeholder {
         font-size: 14px;
-        color: $input-placeholder-color;
+        color: $sportsman-input-placeholder-color;
     }
 }
 
@@ -42,14 +42,14 @@
     width: 60%;
     height: 6%;
     font-size: 16px;
-    color: $normal-text-color;
+    color: $sportsman-normal-text-color;
     background-color: transparent;
-    border: 1px solid $input-border-color;
+    border: 1px solid $sportsman-input-border-color;
     border-radius: 16px;
 
     &::placeholder {
         font-size: 14px;
-        color: $input-placeholder-color;
+        color: $sportsman-input-placeholder-color;
     }
 }
 
@@ -60,7 +60,7 @@
     height: 6%;
     font-size: 16px;
     font-weight: bold;
-    background-color: $primary-color;
+    background-color: $sportsman-primary-color;
 }
 
 .login-email-error {
@@ -78,15 +78,15 @@
 .login-register-text {
     font-size: 16px;
     text-align: center;
-    color: $normal-text-color;
+    color: $sportsman-normal-text-color;
 }
 
 .login-register-link {
-    color: $secondary-color;
+    color: $sportsman-secondary-color;
 }
 
 .login-court-provider {
     font-size: 16px;
     text-align: center;
-    color: $secondary-color;
+    color: $sportsman-secondary-color;
 }
