--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body,
-#app {
-    margin: auto;
-    width: 100%;
-    height: 100%;
+body {
     font-family:
         -apple-system,
         BlinkMacSystemFont,
