--- a/src/root.scss
+++ b/src/root.scss
@@ -1,18 +1,21 @@
-@import "./_globals.scss";
+@import "./_colors.scss";
 
-.root {
-    width: 100%;
-    height: 100%;
-}
-
-.court-provider {
-    width: 100%;
-    height: 100%;
+.root-court-provider {
+    width: 100vw;
+    height: 100vh;
     background-color: $court-provider-background-color;
 }
 
-.sportsman {
-    width: 100%;
-    height: 100%;
+.root-sportsman {
+    width: 100vw;
+    height: 100vh;
     background-color: $sportsman-background-color;
+}
+
+@media (min-width: 768px) {
+    .root-court-provider,
+    .root-sportsman {
+        margin: auto;
+        width: 285px;
+    }
 }
