--- a/src/sportsman/login.scss
+++ b/src/sportsman/login.scss
@@ -5,8 +5,36 @@
     height: 100%;
 }
 
+.login-space1 {
+    height: 10%;
+}
+
+.login-space2 {
+    height: 1%;
+}
+
+.login-space3 {
+    height: 3%;
+}
+
+.login-space4 {
+    height: 2%;
+}
+
+.login-space5 {
+    height: 2%;
+}
+
+.login-space6 {
+    height: 3%;
+}
+
+.login-space7 {
+    height: 1.5%;
+}
+
 .login-title {
-    font-size: 70px;
+    font-size: 68px;
     font-weight: bold;
     font-style: italic;
     text-align: center;
