--- a/src/sportsman/login.scss
+++ b/src/sportsman/login.scss
@@ -50,6 +50,7 @@
 .login-email {
     display: block;
     margin: auto;
+    padding-left: 12px;
     width: 60%;
     height: 6%;
     font-size: 16px;
@@ -67,6 +68,7 @@
 .login-password {
     display: block;
     margin: auto;
+    padding-left: 12px;
     width: 60%;
     height: 6%;
     font-size: 16px;
@@ -92,12 +94,16 @@
 }
 
 .login-email-error {
+    margin-top: 1%;
+    margin-bottom: 1%;
     margin-left: 20%;
     font-size: 14px;
     color: $error-color;
 }
 
 .login-password-error {
+    margin-top: 1%;
+    margin-bottom: 1.5%;
     margin-left: 20%;
     font-size: 14px;
     color: $error-color;
