--- a/src/sportsman/container.scss
+++ b/src/sportsman/container.scss
@@ -1,4 +1,5 @@
 @import "../_colors.scss";
+@import "../sizes.scss";
 
 .container {
     width: 100%;
@@ -34,4 +35,16 @@
     height: 100%;
     background-color: $sportsman-background-color;
     border-left: 1.5px solid $sportsman-notifications-border-color;
+}
+
+@media (min-width: $pc-min-width) {
+    .container-menu {
+        left: calc(50% - $pc-display-size / 2);
+        width: calc($pc-display-size * 0.9);
+    }
+
+    .container-notifications {
+        right: calc(50% - $pc-display-size / 2);
+        width: calc($pc-display-size * 0.9);
+    }
 }
