--- a/src/sportsman/menu.scss
+++ b/src/sportsman/menu.scss
@@ -1,4 +1,5 @@
-@import "../colors.scss";
+@import "../_colors.scss";
+@import "../_sizes.scss";
 
 $item-width: 100%;
 $item-height: 6%;
@@ -17,7 +18,7 @@ $item-border-color: $sportsman-secondary-color;
     position: absolute;
     top: 0;
     right: 0;
-    height: 60px;
+    height: $header-height;
 }
 
 .menu-space1 {
