--- a/src/sportsman/notifications.scss
+++ b/src/sportsman/notifications.scss
@@ -1,4 +1,5 @@
 @import "../_colors.scss";
+@import "../_sizes.scss";
 
 .notifications {
     width: 100%;
@@ -9,7 +10,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    height: 60px;
+    height: $header-height;
 }
 
 .notifications-space1 {
