--- a/src/sportsman/container.scss
+++ b/src/sportsman/container.scss
@@ -35,6 +35,7 @@
     height: 100%;
     background-color: $sportsman-background-color;
     border-left: 1.5px solid $sportsman-notifications-border-color;
+    overflow: auto;
 }
 
 @media (min-width: $pc-min-width) {
