--- a/src/sportsman/body.scss
+++ b/src/sportsman/body.scss
@@ -1,5 +1,5 @@
-@import "../_colors.scss";
+@import "./_colors.scss";
 
 .body {
-    color: $sportsman-normal-text-color;
+    color: $normal-text-color;
 }
