--- a/src/sportsman/container.scss
+++ b/src/sportsman/container.scss
@@ -1,5 +1,6 @@
-@import "../_colors.scss";
-@import "../sizes.scss";
+@import "../_background_colors.scss";
+@import "./_colors.scss";
+@import "../_sizes.scss";
 
 .container {
     width: 100%;
@@ -9,7 +10,7 @@
 .container-header {
     width: 100%;
     height: 8%;
-    border-bottom: 1px solid $sportsman-secondary-color;
+    border-bottom: 1px solid $secondary-color;
 }
 
 .container-body {
@@ -24,7 +25,7 @@
     width: 90%;
     height: 100%;
     background-color: $sportsman-background-color;
-    border-right: 1.5px solid $sportsman-menu-border-color;
+    border-right: 1.5px solid $menu-border-color;
 }
 
 .container-notification {
@@ -34,7 +35,7 @@
     width: 90%;
     height: 100%;
     background-color: $sportsman-background-color;
-    border-left: 1.5px solid $sportsman-notification-border-color;
+    border-left: 1.5px solid $notification-border-color;
     overflow: auto;
 }
 
