--- a/src/sportsman/header.scss
+++ b/src/sportsman/header.scss
@@ -1,4 +1,4 @@
-@import "../colors.scss";
+@import "./_colors.scss";
 
 .header {
     position: relative;
@@ -25,5 +25,5 @@
     justify-content: center;
     align-items: center;
     float: right;
-    color: $sportsman-secondary-color;
+    color: $secondary-color;
 }
