--- a/src/sportsman/notification.scss
+++ b/src/sportsman/notification.scss
@@ -10,16 +10,15 @@
     position: absolute;
     top: 0;
     right: 0;
-    height: $header-height;
+    height: $notification-close-height;
 }
 
 .notification-space1 {
-    width: 100%;
     height: 13%;
 }
 
 .notification-item {
-    padding-left: 5%;
+    padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
     color: $notification-item-text-color;
