--- a/src/sportsman/container.scss
+++ b/src/sportsman/container.scss
@@ -1,7 +1,4 @@
-@import "../_background_colors.scss";
-@import "./_colors.scss";
-@import "../_sizes.scss";
-@import "./_sizes.scss";
+@import "../variables";
 
 .container-header {
     width: 100vw;
@@ -27,11 +24,11 @@
     position: absolute;
     top: 0;
     right: 0;
+    overflow: auto;
     width: 90vw;
     height: 100vh;
     background-color: $sportsman-background-color;
     border-left: 1.5px solid $notification-border-color;
-    overflow: auto;
 }
 
 @media (min-width: $pc-min-width) {
