--- a/src/sportsman/notification.scss
+++ b/src/sportsman/notification.scss
@@ -1,6 +1,4 @@
-@import "./_colors.scss";
-@import "./_sizes.scss";
-@import "../_sizes.scss";
+@import "../variables";
 
 .notification {
     width: 100%;
@@ -19,8 +17,8 @@
 }
 
 .notification-item {
-    margin: 0 12px 0 12px;
-    padding: 10px 0 10px 0;
+    margin: 0 12px;
+    padding: 10px 0;
     font-size: 16px;
     color: $notification-item-text-color;
     border-bottom: 1px dashed $notification-item-border-color;
