--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -41,5 +41,5 @@ $error-color: $danger;
 // sportsman\_sizes.scss
 // ======================================
 $header-height: 8vh;
-$menu-close-height: 8vh;
-$notification-close-height: 8vh;
+$menu-cancel-height: 8vh;
+$notification-cancel-height: 8vh;
