--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -9,8 +9,12 @@ $item-border-style: solid;
 $item-border-color: $secondary-color;
 
 .menu {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 90vw;
+    height: 100vh;
+    background-color: $sportsman-background-color;
 }
 
 .menu-cancel {
@@ -42,4 +46,10 @@ $item-border-color: $secondary-color;
     border-right: $item-border-width $item-border-style $item-border-color;
     border-bottom: $item-border-width $item-border-style $item-border-color;
     border-left: $item-border-width $item-border-style $item-border-color;
+}
+
+@media (min-width: $pc-min-width) {
+    .menu {
+        width: calc(0.9 * $pc-display-size);
+    }
 }
