--- a/src/Components/Notification/notification.scss
+++ b/src/Components/Notification/notification.scss
@@ -1,8 +1,12 @@
 @import "../../variables";
 
 .notification {
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 90vw;
+    height: 100vh;
+    background-color: $sportsman-background-color;
 }
 
 .notification-cancel {
@@ -26,4 +30,10 @@
     font-size: 16px;
     color: $notification-item-text-color;
     border-bottom: 1px dashed $notification-item-border-color;
+}
+
+@media (min-width: $pc-min-width) {
+    .notification {
+        width: calc(0.9 * $pc-display-size);
+    }
 }
