--- a/src/Pages/Login/login.scss
+++ b/src/Pages/Login/login.scss
@@ -31,9 +31,8 @@
 }
 
 .login-logo {
-    display: block;
-    margin: auto;
-    width: 60%;
+    display: flex;
+    justify-content: center;
 }
 
 .login-email {
