--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -35,8 +35,8 @@ $item-border-color: $secondary-color;
 
 .menu-show-home-page,
 .menu-book-now,
-.menu-appointment-record,
-.menu-field-list,
+.menu-show-appointment-records,
+.menu-show-field-list,
 .menu-check-in,
 .menu-log-out {
     width: $item-width;
