feat: 🎸 finished /home page

--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -9,7 +9,7 @@ $item-border-style: solid;
 $item-border-color: $secondary-color;
 
 .menu {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 90vw;
@@ -21,11 +21,11 @@ $item-border-color: $secondary-color;
     position: absolute;
     top: 0;
     right: 0;
-    width: $menu-cancel-height;
-    height: $menu-cancel-height;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: $menu-cancel-height;
+    height: $menu-cancel-height;
 }
 
 .menu-space1 {
