--- a/src/Components/Notification/notification.scss
+++ b/src/Components/Notification/notification.scss
@@ -1,7 +1,7 @@
 @import "../../variables";
 
 .notification {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 90vw;
@@ -13,11 +13,11 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: $notification-cancel-height;
-    height: $notification-cancel-height;
     display: flex;
     align-items: center;
     justify-content: center;
+    width: $notification-cancel-height;
+    height: $notification-cancel-height;
 }
 
 .notification-space1 {
