--- a/src/Components/Pager/pager.scss
+++ b/src/Components/Pager/pager.scss
@@ -1,12 +1,17 @@
 @import "../../variables";
 
 .pager {
-    overflow: auto;
     position: absolute;
     top: 0;
     left: 0;
+    overflow: auto;
     width: 100vw;
     height: 100vh;
+    background-color: $dark;
+
+    &-wrapper {
+        padding-top: $header-height;
+    }
 }
 
 @media (min-width: $pc-min-width) {
