--- a/src/Pages/Login/login.scss
+++ b/src/Pages/Login/login.scss
@@ -4,6 +4,8 @@
     width: 100vw;
     height: 100vh;
     background-image: url("../../assets/images/sport-man-bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .login-space1 {
