--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,6 +6,7 @@ $secondary: #54aa0f;
 $content: #e2e2e2;
 $input: #c3c3c3;
 $dark: #1d1e20;
+$dark-2: #3f4042;
 $info: #009dff;
 $danger: #aa2929;
 $warning: #f7ff00;
@@ -40,6 +41,6 @@ $error-color: $danger;
 // ======================================
 // sportsman\_sizes.scss
 // ======================================
-$header-height: 8vh;
-$menu-cancel-height: 8vh;
-$notification-cancel-height: 8vh;
+$header-height: 67px;
+$menu-cancel-height: 67px;
+$notification-cancel-height: 67px;
