--- a/src/Components/Header/header.scss
+++ b/src/Components/Header/header.scss
@@ -1,6 +1,7 @@
 @import "../../variables";
 
 .header {
+    position: fixed;
     width: 100vw;
     height: $header-height;
     background-color: $sportsman-background-color;
@@ -8,31 +9,31 @@
 }
 
 .header-menu-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     float: left;
     margin-left: 6%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .header-bell {
-    float: right;
-    margin-right: 6%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    float: right;
+    margin-right: 6%;
+    height: 100%;
 }
 
 .header-map {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     float: right;
     margin-right: 6%;
     width: 40px;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     color: $secondary-color;
 }
 
