--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -15,6 +15,7 @@ $item-border-color: $secondary-color;
     width: 90vw;
     height: 100vh;
     background-color: $sportsman-background-color;
+    z-index: $header-z;
 }
 
 .menu-cancel {
