--- a/src/Components/Notification/notification.scss
+++ b/src/Components/Notification/notification.scss
@@ -7,6 +7,7 @@
     width: 90vw;
     height: 100vh;
     background-color: $sportsman-background-color;
+    z-index: $header-z;
 }
 
 .notification-cancel {
