--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -44,3 +44,10 @@ $error-color: $danger;
 $header-height: 67px;
 $menu-cancel-height: 67px;
 $notification-cancel-height: 67px;
+
+// ======================================
+// z-indexes
+// ======================================
+$header-z: 5;
+$popup-z: 6;
+$background-z: 0;
