--- a/src/Components/FieldCard/fieldCard.scss
+++ b/src/Components/FieldCard/fieldCard.scss
@@ -1,7 +1,7 @@
 @import "../../variables";
 
 .field-card {
-    color: $primary;
+    color: $content;
 
     .card-body {
         margin-bottom: 2rem;
@@ -63,8 +63,9 @@
                 }
 
                 &.primary {
+                    font-weight: bold;
                     color: $dark;
-                    background-color: $secondary;
+                    background-color: $primary;
                 }
             }
         }
