--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,7 +6,7 @@ $secondary: #54aa0f;
 $content: #e2e2e2;
 $input: #c3c3c3;
 $dark: #1d1e20;
-$dark-2: #3f4042;
+$dark-2: #37383a;
 $info: #009dff;
 $danger: #aa2929;
 $warning: #f7ff00;
@@ -48,6 +48,9 @@ $notification-cancel-height: 67px;
 // ======================================
 // z-indexes
 // ======================================
-$header-z: 5;
-$popup-z: 6;
+$page: 10;
+$page-cover: 20;
+$page-cover-2: 21;
+$header-z: 50;
+$popup-z: 60;
 $background-z: 0;
