--- a/src/shared.scss
+++ b/src/shared.scss
@@ -43,6 +43,21 @@
         background-position: bottom right;
         background-size: 66% 66%;
     }
+
+    &.add-calendar {
+        background-image: url("./assets/images/icon/add-calendar.svg");
+        background-size: 100% 100%;
+    }
+
+    &.delete {
+        background-image: url("./assets/images/icon/trash-can.svg");
+        background-size: 100% 100%;
+    }
+
+    &.lg {
+        width: 1.4rem;
+        height: 1.4rem;
+    }
 }
 
 .default-content {
