add messages api

--- a/src/Components/Menu/menu.scss
+++ b/src/Components/Menu/menu.scss
@@ -39,7 +39,7 @@ $item-border-color: $secondary-color;
 .menu-show-appointment-records,
 .menu-show-field-list,
 .menu-check-in,
-.menu-log-out {
+.menu-logout {
     width: $item-width;
     height: $item-height;
     font-size: $item-font-size;
