--- a/src/Components/Body/bookBody.scss
+++ b/src/Components/Body/bookBody.scss
@@ -28,6 +28,12 @@
     z-index: $page-cover;
 
     .container {
+        padding: 30px 30px 0;
+    }
+
+    .scroll-area {
+        overflow-y: auto;
         padding: 30px;
+        height: calc(100vh - 100px - 3rem);
     }
 }
