--- a/src/Components/TimePicker/timePicker.scss
+++ b/src/Components/TimePicker/timePicker.scss
@@ -3,13 +3,8 @@
 .time-picker-bar {
     text-align: center;
 
-    .input {
-        ::placeholder {
-            color: $disabled
-        }
-
+    .k-datetimepicker {
         margin-bottom: 1rem;
-        padding: 0.8rem 1.6rem;
         width: 100%;
         color: $input;
         background-color: rgba($dark, 0.6);
@@ -19,5 +14,27 @@
             inset 0 0 10px rgba(0, 0, 0, 0.6),
             -2px -2px 5px rgba(255, 255, 255, 0.2),
             3px 3px 3px rgba(0, 0, 0, 0.3);
+
+        .k-dateinput {
+            input.k-input-inner {
+                padding: 0.8rem 1.6rem;
+                background-color: transparent;
+            }
+        }
+
+        .k-button {
+            padding-right: 1rem;
+            width: auto !important;
+            height: auto !important;
+            background-color: transparent;
+            border: 0;
+
+            .k-icon {
+                & > svg {
+                    width: 1.2rem !important;
+                    height: 1.2rem !important;
+                }
+            }
+        }
     }
 }
