feat: 🎸 finished booking select function

--- a/src/Components/Body/appointmentsBody.scss
+++ b/src/Components/Body/appointmentsBody.scss
@@ -3,7 +3,7 @@
 .appointment-body {
     background-color: $dark;
 
-    .wrapper {
+    > .wrapper {
         padding: 30px 30px 1px;
 
         .appointment-list {
