--- a/src/Components/FieldCard/fieldCard.scss
+++ b/src/Components/FieldCard/fieldCard.scss
@@ -6,6 +6,7 @@
     .card-body {
         margin-bottom: 2rem;
         padding: 1.2rem;
+        background-color: $dark;
         border-radius: 1rem;
         box-shadow:
             -2px -2px 5px rgba(255, 255, 255, 0.2),
