--- a/src/Components/Body/fieldDetailsBody.scss
+++ b/src/Components/Body/fieldDetailsBody.scss
@@ -3,7 +3,7 @@
 .field-details-body {
     background-color: $dark;
 
-    .wrapper {
+    > .wrapper {
         padding: 30px 30px 1px;
 
         .field-img-container {
