--- a/src/Components/FieldCardM/fieldCardM.scss
+++ b/src/Components/FieldCardM/fieldCardM.scss
@@ -6,6 +6,7 @@
     .card-body {
         margin-bottom: 1rem;
         padding: 0.5rem 1rem;
+        background-color: $dark;
         border-radius: 1rem;
         box-shadow:
             -2px -2px 5px rgba(255, 255, 255, 0.2),
