--- a/src/Components/Body/appointmentsBody.scss
+++ b/src/Components/Body/appointmentsBody.scss
@@ -8,6 +8,18 @@
 
         .appointment-list {
             margin: 0 -30px;
+
+            .empty-check {
+                display: none;
+                padding: 0.5rem 30px;
+                color: $disabled;
+                border-top: 1px solid rgba($disabled, 0.5);
+                border-bottom: 1px solid rgba($disabled, 0.5);
+
+                &:nth-child(1) {
+                    display: block;
+                }
+            }
         }
     }
 }
