feat: 🎸 finished lazy distance loading

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -8,6 +8,7 @@ $input: #c3c3c3;
 $dark: #1d1e20;
 $dark-2: #37383a;
 $info: #009dff;
+$blue: #06418f;
 $danger: #aa2929;
 $warning: #f7ff00;
 $disabled: #707070;
