--- a/src/Components/Button/button.scss
+++ b/src/Components/Button/button.scss
@@ -8,7 +8,11 @@
         margin-bottom: 1rem;
         padding: 0.8rem 1.6rem;
         width: 100%;
+        font-size: 1.2rem;
         font-weight: 900;
+        line-height: 1.44rem;
+
+        // line-height: 1rem;
         color: $dark;
         background-color: $primary;
         transition: 0.3s background-color;
