--- a/src/Components/TimePicker/timePicker.scss
+++ b/src/Components/TimePicker/timePicker.scss
@@ -7,7 +7,7 @@
         margin-bottom: 1rem;
         width: 100%;
         color: $input;
-        background-color: rgba($dark, 0.6);
+        background-color: rgba($dark, 0.7) !important;
         border: 1px solid $disabled;
         border-radius: 1rem;
         box-shadow:
