--- a/src/shared.scss
+++ b/src/shared.scss
@@ -54,6 +54,11 @@
         background-size: 100% 100%;
     }
 
+    &.loading {
+        background-image: url("./assets/images/icon/loading.gif");
+        background-size: 100% 100%;
+    }
+
     &.lg {
         width: 1.4rem;
         height: 1.4rem;
