--- a/src/Components/PopUp/popUp.scss
+++ b/src/Components/PopUp/popUp.scss
@@ -1,12 +1,27 @@
 @import "../../variables";
 
-.field-card-pop-up {
+%pop-up {
     position: fixed;
-    top: $header-height;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: $popup-z;
+}
+
+%bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: $popup-z - 1;
+}
+
+.field-card-pop-up {
+    @extend %pop-up;
+
+    top: $header-height;
 
     > .wrapper {
         position: absolute;
@@ -16,13 +31,33 @@
         z-index: $popup-z + 1;
     }
 
-    .bg {
+    > .bg {
+        @extend %bg;
+    }
+}
+
+.sort-field-pop-up {
+    @extend %pop-up;
+
+    > .wrapper {
         position: absolute;
-        top: 0;
-        left: 0;
+        bottom: 0;
+        padding: 20px 30px;
         width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: $popup-z - 1;
+        background-color: $dark;
+        z-index: $popup-z + 1;
+        box-shadow: 0 -5px 20px rgba(0, 0, 0, 0.6);
+
+        .right-top-button {
+            position: absolute;
+            top: 15px;
+            right: 0;
+
+            // transform: translateY(-50%)
+        }
+    }
+
+    > .bg {
+        @extend %bg;
     }
 }
