--- a/src/shared.scss
+++ b/src/shared.scss
@@ -83,6 +83,18 @@
         background-image: url("./assets/images/icon/running_ball.gif");
         background-size: 100% 100%;
     }
+
+    &.full {
+        background-size: 100% 100%;
+    }
+
+    &.d-block {
+        display: block;
+    }
+
+    &.mr-0 {
+        margin-right: 0;
+    }
 }
 
 .default-content {
