feat: 🎸 finished time slot display and quick booking feature

--- a/src/Components/Body/fieldDetailsBody.scss
+++ b/src/Components/Body/fieldDetailsBody.scss
@@ -27,7 +27,9 @@
             color: $secondary;
         }
 
-        // .time-list
+        .slot-container {
+            margin: 0 -30px;
+        }
 
         .iframe-container {
             margin: 0 -30px;
