feat: 🎸 add lazy-load and fine-tune some styles

--- a/src/Components/Body/checkInBody.scss
+++ b/src/Components/Body/checkInBody.scss
@@ -5,7 +5,9 @@
     background-color: $dark;
 
     > .wrapper {
-        padding: 0 15% 8rem;
+        @extend %wrapper;
+
+        padding: 0 15%;
 
         > .content {
             white-space: pre-line;
