--- a/src/Components/Body/fieldMapBody.scss
+++ b/src/Components/Body/fieldMapBody.scss
@@ -1,5 +1,9 @@
 @import "../../variables";
 
 .map-body {
-    // margin-top: $header-height;
+    &::before {
+        display: block;
+        content: "";
+        height: $header-height;
+    }
 }
