--- a/src/Components/Notifications/notifications.scss
+++ b/src/Components/Notifications/notifications.scss
@@ -5,6 +5,7 @@
     top: 0;
     right: 0;
     overflow: auto;
+    padding-bottom: 6rem;
     width: 90vw;
     height: 100vh;
     background-color: $sportsman-background-color;
