--- a/src/Components/Body/bookBody.scss
+++ b/src/Components/Body/bookBody.scss
@@ -4,11 +4,17 @@
     background-color: $dark;
 
     > .wrapper {
-        padding: 0 15% 8rem;
+        padding: 0 15% 10rem;
         background-image: url("../../assets/images/field-bg.png");
         background-position: top center;
         background-repeat: no-repeat;
         background-size: 100% auto;
+
+        &::before {
+            display: block;
+            content: "";
+            height: $header-height;
+        }
     }
 
     .buttons-container {
@@ -35,6 +41,12 @@
         overflow-y: auto;
         padding: 10px 30px;
         height: calc(100vh - 100px - 3rem);
+
+        &::after {
+            display: block;
+            content: "";
+            height: 6rem;
+        }
 
         .empty-check {
             display: none;
