--- a/src/Components/Body/bookSuccessBody.scss
+++ b/src/Components/Body/bookSuccessBody.scss
@@ -1,15 +1,20 @@
 @import "../../variables";
 
 .book-success-body {
-    min-height: calc(100vh - $header-height);
     background-color: $dark;
 
     > .wrapper {
-        padding: 0 15% 8rem;
+        padding: 0 15% 10rem;
         background-image: url("../../assets/images/field-bg.png");
         background-position: top center;
         background-repeat: no-repeat;
         background-size: 100% auto;
+
+        &::before {
+            display: block;
+            content: "";
+            height: $header-height;
+        }
 
         > .content {
             margin-right: -21.4%;
